[package]
name = "media_info"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Foundation", "Media_Control", "Storage_Streams", "Storage", "Foundation_Collections", "Storage_Search"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-media-player = "0.3.0"
