[package]
name = "media_info"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.140"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Foundation", "Media_Control", "Storage_Streams", "Storage", "Foundation_Collections", "Storage_Search"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-media-player = "0.3.0"
